styles.css
:root {
    --icon-color: #444;
    --icons-size: 18px;
    --logo-height: 92px;
    --logo-width: 272px;
    --global-border-radius: 2px;
}

@keyframes swing {
    15% { transform: rotate(20deg) }
    30% { transform: rotate(-20deg) }
    50% { transform: rotate(10deg) }
    65% { transform: rotate(-10deg) }
    80% { transform: rotate(5deg) }
    100% { transform: rotate(0deg) }
}
@keyframes spin {
    from { transform: rotate(0deg) }
    to { transform: rotate(360deg) }
}

*:focus {
    outline: none;
}

*:link, *:visited {
    text-decoration: none;
    color: #777;
}
*:link:hover{
    color: black;
}

body {
    margin: 0;
    padding: 0;
    font-family: 'Roboto', sans-serif;
}

/* SAME BEHAVIOR */
.individual-group > * , .submit-buttons > *{
    display: inline;
}
.apps-btn , .notification-btn , .voice-icon{
    height: var(--icons-size);
    width: var(--icons-size);
    opacity: 0.5;
}
.apps-btn , .notification-btn {
    position: relative;
    top: 5px;
}
.apps-btn:hover, .notification-btn:hover {
    opacity: 1;
}
.search-input-container, button {
    border-radius: var(--global-border-radius)
}


/* INDIVIDUAL-GROUP */
.individual-group {
    position: absolute;
    right: 0;
}
.individual-group > a:not(:last-child) {
    margin-right: 20px;
    line-height: 20px;
    font-size: 13px;
}
.individual-group > a:not(:last-child):hover {
    color: black;
}
.profil-pic {
    position: relative;
    height: 36px;
    top: 12px;
    left: -15px;
}
.profil-pic:hover {
    animation: spin 2s 1 ease;
}
a .notification-btn {
    margin-right: 0;
}

/* MAIN-GOOGLE-GROUP */
.main-google-group {
    width: 600px;
    margin : 0 auto;
}
.google-logo {
    height: inherit;
    margin: 33% 28% 0 28%;
}
.search-input-container {
    height: 45px;
    width: 40vw;
    min-width: 485px;
    box-shadow: 0 2px 2px 0 rgba(0,0,0,0.16),0 0 0 1px rgba(0,0,0,0.08);
    margin: 20px auto;
}
.focusing {
    box-shadow: 0 2px 4px 1px rgba(0,0,0,0.16),0 0 2px 0.5px rgba(0,0,0,0.09);
}
input {
    position: relative;
    bottom: 12px;
    left: 20px;
    width: 85%;
    border: none;
    font-size: 1em;
    margin: auto;
}
.voice-icon {
    position: relative;
    opacity: unset;
    margin: 10px auto;
    padding: 2px;
    line-height: 3em;
    left: calc(5% + 15px);
}
.voice-icon:hover {
    animation: swing 1s 1 ease-in-out;
}
a:hover + .spinner {
    visibility: visible;
}

.submit-buttons {
    width: 300px;
    margin: 30px auto;
}
button {
    height: 36px;
    line-height: 27px;
    border: none;
    background:#F1F1F1;
    font-weight: 700;
    color:#888;
    padding: 0 20px;
}
.submit-buttons button:first-child{
    margin-right: 10px;
}
button:hover {
    box-shadow: 0 1px 2px 1px #CCC;
}
.language-option {
    text-align: center;
    font-size: 13px;
}
.language {
    color: #009;
}
.language:hover{
    color: #009;
    text-decoration: underline;
}


/* FOOTER-GROUP */
.footer-group{
    position: absolute;
    bottom: 0;
}
.country, .very-bottom-group {
    margin: 0;
    background: #F1F1F1;
    width: 100vw;
    border: solid 0.5px rgba(0,0,0,0.10);
    height: 40px;
}

.country {
    border-bottom: none;
}
.country > p {
    margin: 0;
    line-height: 3em;
    padding: 0 20px;
    font-size: 14px;
}
.left-group, .right-group {
    position: absolute;
    line-height: 3em;
    font-size: 0.8em;
}

.left-group > *, .right-group > * {
    margin-right: 20px;
}

.left-group {
    left: 20px;
}

.right-group {
    right: 20px;
}

